[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Tileset.png" type="Texture" id=1]
[ext_resource path="res://Enemies/spikeEnemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 76, 38.5 )

[node name="SpikeEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="SpikeCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -11, 3, 2, -3, 2 )

[node name="SpikeSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )

[node name="StartRange" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="StartRange"]
position = Vector2( 0, -36.5 )
shape = SubResource( 4 )

[node name="AimTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Tip" type="Area2D" parent="."]

[node name="TipCollider" type="CollisionPolygon2D" parent="Tip"]
polygon = PoolVector2Array( 0, -12, -2, -5, 2, -5 )

[connection signal="body_entered" from="StartRange" to="." method="_on_StartRange_body_entered"]
[connection signal="timeout" from="AimTimer" to="." method="_on_AimTimer_timeout"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_AttackDelay_timeout"]
[connection signal="body_entered" from="Tip" to="." method="_on_Tip_body_entered"]
